# databricks

./: .gitignore  01-getting-started.postman_collection.json  02-provision-azure-databricks.postman_collection.json  02-provision-workspace.postman_collection.json  03-manage-groups-and-users.postman_collection.json  03-manage-users.postman_collection.json  04-manage-clusters.postman_collection.json  05-manage-workspace.postman_collection.json  06-manage-jobs.postman_collection.json  README.md  index.html  index.md  test.md
ai-governance/scenarios/07-AuthZ-SHOWCASE/mcp-server/: .databricksignore  app.yaml  pyproject.toml  startup.sh
connectors/: .gitignore  DESIGN.md  README.md  WORKFLOW.md  databricks.yml  pyproject.toml  requirements.txt
connectors/data_generation/: __init__.py  fhir_faker.py  hl7v2_faker.py  resilience_test_data.ndjson  sample_fhir_data.ndjson
connectors/libs/: __init__.py
connectors/notebooks/: hl7v2_faker.py  test_healthcare_connector.py  test_hl7v2_complete.py  test_hl7v2_file_mode.py
connectors/pipelines/healthcare_ingestion/: .gitignore  README.md  pytest.ini
connectors/pipelines/healthcare_ingestion/fhir/: __init__.py  (+4 more)
connectors/skills/: create-documentation.md  implement-connector.md  planning-session.md  test-connector.md  understand-source.md
connectors/sources/: __init__.py
connectors/sources/healthcare/: DESIGN.md  __init__.py  healthcare_api_doc.md  hl7v2_parser.py  lakeflow_connect.py
connectors/sources/interface/: README.md  __init__.py  lakeflow_connect.py
connectors/tests/: __init__.py
connectors/tools/: README.md
(+932 files in other folders)
