[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeflow-connectors"
version = "0.1.0"
description = "Lakeflow Community Connectors"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "fhir.resources>=7.0.0",
    "pyspark>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["sources*", "libs*"]

[tool.pytest.ini_options]
testpaths = ["sources"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
